--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,22 @@
 .user-input {
   width: 46vw;
-  height: 90vh;
   background-color: white;
-  border: 1px solid white;
+  border: 0px solid white;
+  margin: 0;
+  padding: 4px;
+  overflow: vi;
+  line-height: 24px;
+  min-height: 70vh;
+  border: 1px solid red;
   outline: none;
-  border-radius: 2%;
-  resize: none;
 }
 
 .container {
   background-color: #333;
   width: 100vw;
   height: 100vh;
+}
+
+.textarea-form {
+  width: 46vw;
 }
